testsuite/tests/typecheck/should_fail/T15801.stderr
T15801.hs:52:10: error: [GHC-18872]
    • Couldn't match kind ‘*’ with ‘Op (*)’
      When matching types
        b :: Op (*)
        UnOp b :: *
    • In the instance declaration for ‘OpRíki (Op (*))’

